--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^0.23.4",
+    "@pinata/sdk": "^2.1.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.48.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "form-data": "^4.0.0",
+    "formidable": "^2.1.2",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.16.3",
     "wagmi": "^2.10.8"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
